--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
           uri: lb://med-center-server
           predicates:
             - Path=/medcenters/**
+        - id: blood-request-server
+          uri: lb://blood-request-service
+          predicates:
+            - Path=/requests/**
 eureka:
   client:
     register-with-eureka: true
