Implement medical center edit form

--- a/med-center-service/build.gradle
+++ b/med-center-service/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.3.1.Final'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
