--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
           lower-case-service-id: true
       routes:
         - id: user-service
-          uri: lb://user-service
+          uri: http://localhost:8081
           predicates:
-            - Path=/users/**
+            - Path=/auth/**, /register, /login, /home, /
         - id: med-center-server
           uri: lb://med-center-server
           predicates:
