--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
           uri: lb://blood-request-service
           predicates:
             - Path=/requests/**
+        - id: donor-service
+          uri: http://localhost:8084
+          predicates:
+            - Path=/donor/**
 eureka:
   client:
     register-with-eureka: true
