--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -16,11 +16,11 @@ spring:
           predicates:
             - Path=/auth/**, /register, /login, /home, /
         - id: med-center-server
-          uri: lb://med-center-server
+          uri: http://localhost:8082
           predicates:
             - Path=/medcenters/**
         - id: blood-request-server
-          uri: lb://blood-request-service
+          uri: http://localhost:8083
           predicates:
             - Path=/requests/**
         - id: donor-service
