Update med-center-service's thymeleaf and api-gateway's properties

--- a/donor-service/src/main/resources/application.yml
+++ b/donor-service/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: donor-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/db
+    url: jdbc:postgresql://localhost:5432/db_blood_donation
     username: postgres
-    password: Qt4076042
+    password: 888
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
