--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
           uri: http://localhost:8081
           predicates:
             - Path=/auth/**, /register, /login, /home, /
-        - id: med-center-server
+        - id: med-center-service
           uri: http://localhost:8082
           predicates:
             - Path=/medcenters/**
