Add Yandex API for Map

--- a/med-center-service/src/main/resources/application.properties
+++ b/med-center-service/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=med-center-service
+# application.properties - ???????? ??? ?????????
+
+# ??????????? Spring Boot
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# ??????????? ?????? ??????????
+logging.level.org.example.medcenterservice=DEBUG
+
+# ??????????? Hibernate/SQL
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+# ??????????? HTTP ????????
+logging.level.org.apache.http=DEBUG
+logging.level.org.springframework.web.client=DEBUG
+
+# ??????????? Thymeleaf
+logging.level.org.thymeleaf=DEBUG
+
+# ??????????? ??? ????
+logging.level.org.example.medcenterservice.controller=TRACE
+
+# ???????? ???? ? ???????
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
