--- a/blood-request-service/build.gradle
+++ b/blood-request-service/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // --- Spring Cloud / Eureka ---
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
