--- a/blood-request-service/build.gradle
+++ b/blood-request-service/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // --- Spring Cloud / Eureka ---
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
@@ -54,6 +53,10 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    implementation 'org.springframework:spring-web'
 }
 
 tasks.named('test') {
