--- a/donation-history-service/src/main/resources/application.yml
+++ b/donation-history-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/db_blood_donation
     username: postgres
-    password: Qt4076042
+    password: 888
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
