--- a/donor-service/src/main/resources/application.yml
+++ b/donor-service/src/main/resources/application.yml
@@ -1,4 +1,15 @@
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: storio.tommy@gmail.com
+    password: swdouiftrxprfxzg
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
   application:
     name: donor-service
   datasource:
@@ -32,6 +43,7 @@ feign:
         connectTimeout: 5000
         readTimeout: 5000
         loggerLevel: basic
+
 
 
 server:
