--- a/donor-service/src/main/resources/application.yml
+++ b/donor-service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/db_blood_donation
     username: postgres
-    password: Qt4076042
+    password: 888
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -54,5 +54,33 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
 
+
+
+# ========== НАСТРОЙКИ ЛОГИРОВАНИЯ ==========
+logging:
+  level:
+    # Наше приложение
+    org.example.bloodrequestservice: DEBUG
+    # Spring
+    org.springframework: INFO
+    org.springframework.web: DEBUG
+    org.springframework.mail: DEBUG
+    org.springframework.cloud: INFO
+    # База данных
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    # Eureka
+    com.netflix.eureka: INFO
+    com.netflix.discovery: INFO
+    # Feign
+    org.springframework.cloud.openfeign: DEBUG
+    feign: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 30
 
 
