--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    implementation 'com.google.guava:guava:32.1.2-jre'
 }
 
 tasks.named('test') {
