create ai-service, integrete Gemini API and build base functions for AI-service

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -35,6 +35,10 @@ spring:
           uri: http://localhost:8086
           predicates:
             - Path=/analysis/**
+        - id: ai-service
+          uri: http://localhost:8087
+          predicates:
+            - Path=/chat/**
 eureka:
   client:
     register-with-eureka: true
