--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -22,7 +22,8 @@ spring:
         - id: blood-request-server
           uri: http://localhost:8083
           predicates:
-            - Path=/requests/**
+            - Path=/requests/**, /templates/**, /api/blood-requests/**, /api/templates/**
+
         - id: donor-service
           uri: http://localhost:8084
           predicates:
