--- a/blood-request-service/build.gradle
+++ b/blood-request-service/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
     // --- JWT ---
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // --- Testing ---
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
