--- a/med-center-service/src/main/resources/application.properties
+++ b/med-center-service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ logging.level.org.example.medcenterservice=DEBUG
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.example.medcenterservice=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 logging.level.org.apache.http=DEBUG
